--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -280,7 +280,7 @@
     <div class="dashboard-header">
         <h1 class="dashboard-title">
             <i class="fas fa-chart-line me-3"></i>
-            داش بورد الإدارة المحسن
+            داش بورد الإدارة 
         </h1>
         <p class="dashboard-subtitle">
             تحليلات شاملة لجميع أقسام النظام - 
